main.yml update

--- a/main.yml
+++ b/main.yml
@@ -7,7 +7,7 @@
         repo_path: "{{ playbook_dir }}"
 
     - name: file update
-      local_action: shell cd {{ repo_path }} ; git checkout {{ git_tag }}
+      local_action: "shell cd {{ repo_path }} ; git checkout {{ git_tag }}"
       when: switch_flag is defined
       
     - name: copy postfix config
