--- a/main.yml
+++ b/main.yml
@@ -7,6 +7,9 @@
           repo_path: "{{ playbook_dir }}"
 
     - debug:
+        msg: "{{ playbook_dir }}"
+
+    - debug:
         msg: "{{ repo_path }}"
 
     - name: file update
