main.yml update

--- a/main.yml
+++ b/main.yml
@@ -1,17 +1,17 @@
 ---
-- hosts: all
+- name: test
+  hosts: all
   gather_facts: no
-  tasks:
     - set_stats:
         data:
           repo_path: "{{ playbook_dir }}"
-
+  
     - debug:
         msg: "{{ playbook_dir }}"
-
+  
     - debug:
         msg: "{{ repo_path }}"
-
+  
     - name: file update
       local_action: "shell cd {{ repo_path }} ; git checkout {{ git_tag }}"
       when: switch_flag is defined
