--- a/main.yml
+++ b/main.yml
@@ -1,22 +1,22 @@
 ---
-- name: test
-  hosts: all
+- hosts: all
   gather_facts: no
-  - set_stats:
-      data:
-        repo_path: "{{ playbook_dir }}"
-
-  - debug:
-      msg: "{{ playbook_dir }}"
-
-  - debug:
-      msg: "{{ repo_path }}"
-
-  - name: file update
-    local_action: "shell cd {{ repo_path }} ; git checkout {{ git_tag }}"
-    when: switch_flag is defined
-    
-  - name: copy postfix config
-    copy:
-      src: "{{ repo_path }}/files/hosts"
-      dest: /etc/hosts
+  tasks:
+    - set_stats:
+        data:
+          repo_path: "{{ playbook_dir }}"
+  
+    - debug:
+        msg: "{{ playbook_dir }}"
+  
+    - debug:
+        msg: "{{ repo_path }}"
+  
+    - name: file update
+      local_action: "shell cd {{ repo_path }} ; git checkout {{ git_tag }}"
+      when: switch_flag is defined
+      
+    - name: copy postfix config
+      copy:
+        src: "{{ repo_path }}/files/hosts"
+        dest: /etc/hosts
