--- a/main.yml
+++ b/main.yml
@@ -1,11 +1,18 @@
 ---
-- hosts: all
+- hosts: client
   gather_facts: no
   tasks:
     - set_stats:
         data:
           repo_path: "{{ playbook_dir }}"
   
+    - name: file update
+      local_action: "shell cd {{ playbook_dir }} ; git checkout {{ git_tag }}"
+      when: switch_flag is defined
+      
+- hosts: all
+  gather_facts: no
+  tasks:
     - name: file update
       local_action: "shell cd {{ playbook_dir }} ; git checkout {{ git_tag }}"
       when: switch_flag is defined
